--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>AppDeGatos</title>
     <link href="style.css" rel="stylesheet">
   </head>
-  <body bgcolor="#D7BDE2">
-    <center><h2>AppDeGatos</h2></center>
+  <body bgcolor="pink">
+    <h1>AppDeGatos</h1>
     <main>
       <h1>Imágenes de Gatos:</h1>
       <!-- TODO: Agregar enlace a imágenes de gatos -->
@@ -13,7 +13,7 @@
 
       <a href="#" target="_blank" rel="noopener noreferrer"><img src="https://bit.ly/fcc-relaxing-cat" alt="Un lindo gato naranja recostado sobre su espalda."></a>
 
-      <hr color="black">
+      <hr color="white">
 
       <h3>Listas de Gatos</h3>
 
