--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <img src="https://i.pinimg.com/736x/b5/e4/73/b5e473a80d8e350c2487ad30f3aae27b.jpg" width="300" height="200" alt="Gatos">
 
       <form action="/enviar-respuesta">
+        <form method="ortizfabiola595@gmail.com">
         <!-- Botones de Radio -->
         <label for="interior">
           <input id="interior" type="radio" value="interior" name="interior-exterior">Interior
@@ -50,6 +51,7 @@
         <h2>Ingrese su apellido</h2>
         <input type="text" placeholder="Ingrese su apellido"></label>
         <form action="/uno/juan.txt">
+          <form action="mailto:ortizfabiola595@gmail.com" method="post" enctype="text/plain">
           <h3>¿Como es ser un  gato?</h3>
           <input type="checkbox">Amoroso
           <input type="checkbox">Peresoso
